Them chuc nang phan quyen RBAC, xem danh sach user, tim kiem theo ten, phan trang danh sach user, tich hop Swagger